# tim2tox

./: .gitattributes  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  README_BUILD.en.md  README_BUILD.md
auto_tests/: DEBUG_NATIVE_CRASH.en.md  DEBUG_NATIVE_CRASH.md  README.en.md  README.md  VALIDATION_RESULTS.md  VIRTUAL_CLOCK.md  pubspec.yaml  run_conversation_test_with_lldb.sh  run_pin_test_with_lldb.sh  run_tests_ordered.sh  run_tests_with_lib.sh
auto_tests/test/: test_fixtures.dart  test_helper.dart  test_path_provider_mock.dart
auto_tests/test/scenarios/: scenario_avatar_test.dart  scenario_avatar_virtual_test.dart  scenario_bootstrap_test.dart  scenario_bootstrap_virtual_test.dart  scenario_conference_av_test.dart  scenario_conference_av_virtual_test.dart  scenario_conference_double_invite_test.dart  scenario_conference_double_invite_virtual_test.dart  scenario_conference_invite_merge_test.dart  scenario_conference_invite_merge_virtual_test.dart  scenario_conference_offline_test.dart  scenario_conference_offline_virtual_test.dart  scenario_conference_peer_nick_test.dart  scenario_conference_peer_nick_virtual_test.dart  scenario_conference_query_test.dart  scenario_conference_query_virtual_test.dart  scenario_conference_simple_test.dart  scenario_conference_simple_virtual_test.dart  scenario_conference_test.dart  scenario_conference_two_test.dart  scenario_conference_two_virtual_test.dart  scenario_conference_virtual_test.dart  scenario_conversation_callback_test.dart  scenario_conversation_pin_test.dart  scenario_conversation_pin_virtual_test.dart  scenario_conversation_test.dart  scenario_conversation_virtual_test.dart  scenario_dht_nodes_response_api_test.dart  scenario_dht_nodes_response_api_virtual_test.dart  scenario_events_test.dart  scenario_events_virtual_test.dart  scenario_file_cancel_test.dart  scenario_file_cancel_virtual_test.dart  scenario_file_seek_test.dart  scenario_file_seek_virtual_test.dart  scenario_file_transfer_test.dart  scenario_file_transfer_virtual_test.dart  scenario_friend_connection_test.dart  scenario_friend_connection_virtual_test.dart  scenario_friend_delete_test.dart  (+107 more)
auto_tests/test/scenarios_binary/: scenario_binary_friend_refuse_test.dart  scenario_binary_history_hook_test.dart
auto_tests/test/unit_tests/: message_history_persistence_test.dart
dart/: README.en.md  README.md
dart/lib/ffi/: tim2tox_ffi.dart
dart/lib/interfaces/: extended_preferences_service.dart
dart/lib/models/: chat_message.dart
dart/lib/sdk/: message_search.dart  tim2tox_sdk_platform.dart  tim2tox_sdk_platform_converters.dart
dart/lib/service/: call_av_backend.dart  call_bridge_service.dart  ffi_chat_service.dart  toxav_service.dart  tuicallkit_adapter.dart
dart/lib/utils/: binary_replacement_history_hook.dart  message_converter.dart  message_history_persistence.dart  offline_message_queue_persistence.dart  tox_id_utils.dart
dart/test/: binary_replacement_protocol_custom_filter_test.dart
doc/: README.en.md  README.md
doc/api/: API_REFERENCE.en.md  API_REFERENCE.md  API_REFERENCE_DART.en.md  API_REFERENCE_DART.md  API_REFERENCE_FFI.en.md  API_REFERENCE_FFI.md  API_REFERENCE_TEMPLATE.en.md  API_REFERENCE_V2TIM.en.md  API_REFERENCE_V2TIM.md  API_SUPPORT_MATRIX.en.md  API_SUPPORT_MATRIX.md
doc/architecture/: BINARY_REPLACEMENT.en.md  BINARY_REPLACEMENT.md  FFI_COMPAT_LAYER.en.md  FFI_COMPAT_LAYER.md  MODULARIZATION.en.md  MODULARIZATION.md  PLATFORM_VS_V2TIM_AND_CONVERSATION_LISTENER.en.md  PLATFORM_VS_V2TIM_AND_CONVERSATION_LISTENER.md
doc/development/: DEVELOPMENT_GUIDE.en.md  DEVELOPMENT_GUIDE.md  FFI_FUNCTION_DECLARATION_GUIDE.en.md  FFI_FUNCTION_DECLARATION_GUIDE.md
doc/integration/: BOOTSTRAP_AND_POLLING.en.md  BOOTSTRAP_AND_POLLING.md  INTEGRATION_OVERVIEW.en.md  INTEGRATION_OVERVIEW.md  RESTORE_AND_PERSISTENCE.en.md  RESTORE_AND_PERSISTENCE.md  TOXAV_AND_SIGNALING.en.md  TOXAV_AND_SIGNALING.md
doc/troubleshooting/: README.en.md  README.md  RUNNING_FLAG_ANALYSIS.md
example/: CLIENT_USAGE.en.md  CLIENT_USAGE.md  README.en.md  README.md
ffi/: CMakeLists.txt  callback_bridge.cpp  dart_compat_conversation.cpp  dart_compat_friendship.cpp  dart_compat_group.cpp  dart_compat_internal.h  dart_compat_layer.h  dart_compat_listeners.cpp  dart_compat_message.cpp  dart_compat_user.cpp  tim2tox_ffi.cpp  tim2tox_ffi.h  tim2tox_ffi_exports.map  tim2tox_ffi_exports_macho.txt  tim2tox_ffi_toxcore_reexports.def
include/: V2TIMBuffer.h  V2TIMCommon.h  V2TIMCommunity.h  V2TIMConversation.h  V2TIMDefine.h  V2TIMFriendship.h  V2TIMGroup.h  V2TIMMessage.h  V2TIMOfficialAccount.h  V2TIMSignaling.h
patches/tencent_cloud_chat_sdk/8.7.7201/: 0001-native-library-name-override.patch  0002-platform-interface-extension-points.patch  0003-route-managers-through-platform.patch  0004-native-library-manager-callback-dispatch.patch  0005-native-adapter-additions.patch  0006-models-and-bindings.patch  series
patches/tencent_cloud_chat_sdk/8.9.7540+3/: 0001-native-library-name-override.patch  0002-platform-interface-extension-points.patch  0003-route-managers-through-platform.patch  0004-native-library-manager-callback-dispatch.patch  0005-models-and-bindings.patch  0007-v2-tim-message-risk-type-null-safety.patch  0008-callback-passthrough-group-tips-event.patch  0009-v2-tim-group-info-null-safety.patch  0010-conference-group-created-and-member-invited.patch  0011-broaden-multi-instance-binary-listener-passthrough.patch  0012-group-members-info-flat-array-decode.patch  0013-passthrough-update-friend-profile.patch  0014-instance-tagged-listener-routing.patch  0015-v2-tim-conversation-recv-opt-null-safety.patch  series  (+2 more)
source/: CMakeLists.txt  IrcClientManager.cpp  IrcClientManager.h  ToxManager.cpp  V2TIMConversationManagerImpl.cpp  V2TIMConversationManagerImpl.h  V2TIMFriendshipManagerImpl.cpp  V2TIMGroupManagerImpl.cpp  V2TIMManagerImpl.cpp  V2TIMManagerImpl.h  V2TIMMessageManagerImpl.cpp  V2TIMMessageManagerImpl.h  irc_client_api.cpp
test/: CMakeLists.txt  IrcClientManagerTest.cpp
tool/: apply_sdk_patches.dart  tencent_cloud_chat_sdk.lock.json
